<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/d1"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="@+id/num"
        app:layout_constraintStart_toStartOf="@+id/num"
        app:layout_constraintTop_toBottomOf="@+id/num" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/partner"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/num"
        android:textColor="#fff"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/slogan3"
        app:layout_constraintStart_toStartOf="@+id/slogan3"
        app:layout_constraintTop_toBottomOf="@+id/slogan3" />

    <TextView
        android:id="@+id/slogan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/fo"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/slogan"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/slogan"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <TextView
        android:id="@+id/slogan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/goal"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/slogan2"
        app:layout_constraintStart_toStartOf="@+id/slogan2"
        app:layout_constraintTop_toBottomOf="@+id/slogan2" />
</androidx.constraintlayout.widget.ConstraintLayout>